--- a/PythonForEveryBody/PYFE_Notes3.ipynb
+++ b/PythonForEveryBody/PYFE_Notes3.ipynb
@@ -154,6 +154,215 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '19', '42']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "x= 'My 2 favorite numbers are 19 and 42'\n",
+    "y= re.findall('[0-9]+',x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y=re.findall('[AEIOU]+',x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['stephen.marquard@uct.ac.za']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= 'From stephen.marquard@uct.ac.za Sat Jan 5 09:14:16 2008'\n",
+    "y= re.findall('\\S+@\\S+',x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['stephen.marquard@uct.ac.za']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= 'From stephen.marquard@uct.ac.za Sat Jan 5 09:14:16 2008'\n",
+    "y= re.findall('^From (\\S+@\\S+)',x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data='From stephen.marquard@uct.ac.za Sat Jan 5 09:14:16 2008'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uct.ac.za\n"
+     ]
+    }
+   ],
+   "source": [
+    "atpos=data.find('@')\n",
+    "sppos=data.find(' ',atpos)\n",
+    "host=data[atpos+1:sppos]\n",
+    "print(host)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uct.ac.za\n"
+     ]
+    }
+   ],
+   "source": [
+    "words=data.split()\n",
+    "email=words[1]\n",
+    "pieces=email.split('@')\n",
+    "print(pieces[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['uct.ac.za']\n"
+     ]
+    }
+   ],
+   "source": [
+    "y=re.findall('@([^ ]*)',data)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['uct.ac.za']\n"
+     ]
+    }
+   ],
+   "source": [
+    "y=re.findall('^From .*@([^ ]*)',data)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.8475, 0.6178, 0.6961, 0.7565, 0.7626, 0.7556, 0.7002, 0.7615, 0.7601, 0.7605, 0.6959, 0.7606, 0.7559, 0.7605, 0.6932, 0.7558, 0.6526, 0.6948, 0.6528, 0.7002, 0.7554, 0.6956, 0.6959, 0.7556, 0.9846, 0.8509, 0.9907]\n",
+      "Maximum: 0.9907\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "hand=open('mbox-short.txt')\n",
+    "numlist=list()\n",
+    "for line in hand:\n",
+    "    line = line.rstrip()\n",
+    "    stuff=re.findall('^X-DSPAM-Confidence: ([0-9.]+)',line)\n",
+    "    if len(stuff) !=1: continue\n",
+    "    num=float(stuff[0])\n",
+    "    numlist.append(num)\n",
+    "print(numlist)\n",
+    "print('Maximum:',max(numlist))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['$10.00']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "x='We just received $10.00 for cookies.'\n",
+    "y=re.findall('\\$[0-9.]+',x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
