--- a/PythonForEveryBody/PYFE_Notes3.ipynb
+++ b/PythonForEveryBody/PYFE_Notes3.ipynb
@@ -363,10 +363,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['From stephen.marquard@uct.ac.za Sat Jan 5 09:14:']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= 'From stephen.marquard@uct.ac.za Sat Jan 5 09:14:16 2008'\n",
+    "y= re.findall('F.+:',x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['From: Using the :']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'From: Using the : character'\n",
+    "y = re.findall('^F.+:', x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['stephen.marquard@uct.ac.za']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= 'From stephen.marquard@uct.ac.za Sat Jan 5 09:14:16 2008'\n",
+    "y= re.findall('\\S+?@\\S+' ,x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "x='We just received $10.00 for cookies.'\n",
+    "y=re.findall('\\$[0-9.]+',x)\n",
+    "print(y)"
+   ]
   }
  ],
  "metadata": {
