summarize with course 4

--- a/PythonForEveryBody/PYFE_Notes3.ipynb
+++ b/PythonForEveryBody/PYFE_Notes3.ipynb
@@ -429,6 +429,127 @@
     "y=re.findall('\\$[0-9.]+',x)\n",
     "print(y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTTP/1.1 200 OK\n",
+      "Date: Sat, 24 Aug 2024 03:51:28 GMT\n",
+      "Server: Apache/2.4.52 (Ubuntu)\n",
+      "Last-Modified: Sat, 13 May 2017 11:22:22 GMT\n",
+      "ETag: \"a7-54f6609245537\"\n",
+      "Accept-Ranges: bytes\n",
+      "Content-Length: 167\n",
+      "Cache-Control: max-age=0, no-cache, no-store, must-revalidate\n",
+      "Pragma: no-cache\n",
+      "Expires: Wed, 11 Jan 1984 05:00:00 GMT\n",
+      "Connection: close\n",
+      "Content-Type: text/plain\n",
+      "\n",
+      "But soft what light through yonder window breaks\n",
+      "It is the east and Juliet is the sun\n",
+      "Arise fair sun and kill the envious moon\n",
+      "Who is already s\n",
+      "ick and pale with grief\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import socket\n",
+    "\n",
+    "mysock=socket.socket(socket.AF_INET,socket.SOCK_STREAM)\n",
+    "mysock.connect(('data.pr4e.org',80))\n",
+    "cmd='GET http://data.pr4e.org/romeo.txt HTTP/1.0\\r\\n\\r\\n'.encode()\n",
+    "mysock.send(cmd)\n",
+    "\n",
+    "while True:\n",
+    "    data=mysock.recv(512)\n",
+    "    if (len(data)<1):\n",
+    "        break\n",
+    "    print(data.decode())\n",
+    "mysock.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ord('H'))\n",
+    "print(ord('\\n'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "But soft what light through yonder window breaks\n",
+      "It is the east and Juliet is the sun\n",
+      "Arise fair sun and kill the envious moon\n",
+      "Who is already sick and pale with grief\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib.request, urllib.parse,urllib.error\n",
+    "\n",
+    "fhand=urllib.request.urlopen('http://data.pr4e.org/romeo.txt')\n",
+    "for line in fhand:\n",
+    "    print(line.decode().strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'But': 1, 'soft': 1, 'what': 1, 'light': 1, 'through': 1, 'yonder': 1, 'window': 1, 'breaks': 1, 'It': 1, 'is': 3, 'the': 3, 'east': 1, 'and': 3, 'Juliet': 1, 'sun': 2, 'Arise': 1, 'fair': 1, 'kill': 1, 'envious': 1, 'moon': 1, 'Who': 1, 'already': 1, 'sick': 1, 'pale': 1, 'with': 1, 'grief': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fhand=urllib.request.urlopen('http://data.pr4e.org/romeo.txt')\n",
+    "counts=dict()\n",
+    "\n",
+    "for line in fhand:\n",
+    "    words=line.decode().split()\n",
+    "    for word in words:\n",
+    "        counts[word]=counts.get(word,0) + 1\n",
+    "print(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
